add back special surefire handling